# python-mg

./: .gitignore  Cargo.toml  README.md  example.py  generate_data.py  latex-commands.tex  pyproject.toml
.github/workflows/: CI.yml  PR.yml
docs/source/: conf.py  graphing.rst  index.rst  lexicon.rst  metrics.rst  semantics.rst  syntax.rst
examples/: generate_strings.py  train_llm_from_mg.py
python/python_mg/: __init__.py  _lib_name.pyi  lexicon.py  metrics.py  python_mg.pyi  semantics.py  syntax.py
python/tests/: test_mg.py
src/: graphing.rs  lib.rs  semantics.rs  syntax.rs  tokenizers.rs
src/semantics/: lot_types.rs  scenario.rs
