[package]
name = "python-mg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_mg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = [
  "anyhow",
  "extension-module",
  "generate-import-lib",
  "multiple-pymethods",
] }
minimalist-grammar-parser = { git = "https://@github.com/MichaelGoodale/minimalist-grammar-parser.git", features = [
  "pretty",
] }
anyhow = "1.0.98"
logprob = "0.2.1"
rand = "0.9.1"
numpy = "0.26.0"
