[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "python-mg"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pillow>=10.4.0",
    "pydot>=4.0.1",
    "rustworkx>=0.15.1",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "python_mg._lib_name"

[dependency-groups]
dev = [
    "patchelf>=0.17.2.2",
    "pytest>=8.3.5",
]
