[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "python-mg"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4",
    "pillow>=10.4.0",
    "pydot>=4.0.1",
    "rustworkx>=0.15.1",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "python_mg._lib_name"

[dependency-groups]
dev = [
    "patchelf>=0.17.2.2",
    "pytest>=8.3.5",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
]
examples = [
    "datasets>=3.1.0",
    "scipy>=1.10.1",
    "torch>=2.5.1",
    "transformers[torch]>=4.46.3",
]

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
